--- a/01/main.css
+++ b/01/main.css
@@ -79,4 +79,26 @@ h1 {
 .main-nav_item a {
   text-decoration: none;
   color: #0e4f1f;
+  font-weight: bold;
+  padding: 3px 0px;
+}
+
+.main-nav_item a:hover,
+.main-nav_item a:active {
+  color: white;
+  border-bottom: 5px solid white;
+}
+
+.main-nav_item--cta a {
+  color: white;
+  background: #ff1b68;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+.main-nav_item--cta a:hover,
+.main-nav_item--cta a:active {
+  color: #ff1b68;
+  background: white;
+  border: none;
 }
