--- a/01/main.css
+++ b/01/main.css
@@ -19,7 +19,7 @@ body {
 }
 
 #product-overview {
-  background: #ff1b68;
+  background: url("freedom.jpg");
   width: 100%;
   height: 500px;
   padding: 10px;
