--- a/01/main.css
+++ b/01/main.css
@@ -25,6 +25,11 @@ body {
   padding: 10px;
 }
 
+.section-title {
+  color: #2ddf5c;
+  text-align: center;
+}
+
 #product-overview h1 {
   color: white;
   font-family: "RixYeoljeongdo_Regular", sans-serif;
@@ -32,8 +37,75 @@ body {
   font-style: normal;
 }
 
-.section-title {
-  color: #2ddf5c;
+.plan {
+  background: #d5ffdc;
+  text-align: center;
+  padding: 16px;
+  margin: 8px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: middle;
+}
+
+.plan--highlighted {
+  background: #19b84c;
+  color: white;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.plan_annotation {
+  background: white;
+  color: #19b84c;
+  padding: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.plan_title {
+  color: #0e4f1f;
+}
+
+.plan_price {
+  color: #4b4b4b;
+}
+
+.plan--highlighted .plan_title {
+  color: white;
+}
+
+.plan--highlighted .plan_price {
+  color: #0e4f1f;
+}
+
+.plan_featrues {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.plan_featrues li {
+  margin: 8px 0px;
+}
+
+.button {
+  background: #0e4f1f;
+  color: white;
+  font: inherit;
+  border: 1.5px solid #0e4f1f;
+  padding: 8px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+  background-color: white;
+  color: #0e4f1f;
+}
+
+.button:focus {
+  outline: none;
 }
 
 h1 {
