--- a/01/main.css
+++ b/01/main.css
@@ -77,13 +77,13 @@ body {
   color: #0e4f1f;
 }
 
-.plan_featrues {
+.plan_features {
   list-style: none;
   margin: 0px;
   padding: 0px;
 }
 
-.plan_featrues li {
+.plan_features li {
   margin: 8px 0px;
 }
 
@@ -106,6 +106,46 @@ body {
 
 .button:focus {
   outline: none;
+}
+
+#key-features {
+  background-color: #ff1b68;
+  margin-top: 80px;
+  padding: 16px;
+}
+
+#key-features .section-title {
+  color: white;
+  margin: 32px;
+}
+
+.key-features_list {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+
+.key-feature {
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+}
+
+.key-feature_image {
+  background: #ffcede;
+  width: 128px;
+  height: 128px;
+  border: 2px solid #424242;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.key-feature_description {
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
 }
 
 h1 {
