--- a/01/main.css
+++ b/01/main.css
@@ -214,3 +214,31 @@ h1 {
   background: white;
   border: none;
 }
+
+.main-footer {
+  background-color: black;
+  padding: 32px;
+  margin-top: 48px;
+}
+
+.main-footer_links {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+
+.main-footer_link {
+  display: inline-block;
+  margin: 0px 16px;
+}
+
+.main-footer_link a {
+  color: white;
+  text-decoration: none;
+}
+
+.main-footer_link a:hover,
+.main-footer_link a:active {
+  color: #ccc;
+}
