feat: packages float 설명 div 만들어 주고, clear:both를 사용해서 위 아래에 있는 것들을 float 속성을 없애줘야 한다.

--- a/01/packages/packages.css
+++ b/01/packages/packages.css
@@ -42,8 +42,15 @@ main {
   background: rgba(213, 255, 220, 0.95);
 }
 
+.clearfix {
+  clear: both;
+}
+
 .contents_mid {
   background-color: rgba(234, 252, 237, 0.95);
+  float: right;
+  border-right: none;
+  border-left: 4px solid #0e4f1f;
 }
 
 .contents_bot {
