feat: 요금제 중앙 정렬 배치

--- a/01/main.css
+++ b/01/main.css
@@ -25,6 +25,12 @@
   font-style: normal;
 }
 
+.plan_list {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
 .plan {
   background: #d5ffdc;
   text-align: center;
