--- a/01/shared.css
+++ b/01/shared.css
@@ -12,6 +12,9 @@ body {
 
 .main-header {
   width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
   background: #2ddf5c;
   padding: 8px 16px;
 }
