--- a/01/packages/packages.css
+++ b/01/packages/packages.css
@@ -15,6 +15,7 @@ main {
   margin: 16px 0;
   border: 4px solid #0e4f1f;
   border-left: none;
+  position: relative;
 }
 
 .plan-contents:hover,
@@ -32,6 +33,17 @@ main {
 
 .plan-contents_title {
   color: black;
+}
+
+.package_badge {
+  top: 0px;
+  right: 0px;
+  margin: 30px;
+  position: absolute;
+  font-size: 12px;
+  color: white;
+  background: #ff5454;
+  padding: 8px;
 }
 
 .plan-contents_subtitle {
