--- a/03/main.css
+++ b/03/main.css
@@ -4,6 +4,7 @@ html {
   border: 5px solid white;
   margin: 15px;
   height: 2000px;
+  overflow: auto;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  overflow: hidden;
 }
 
 .parent {
@@ -18,6 +20,8 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  position: relative;
+  top: 200px;
 }
 
 .parent div {
@@ -26,13 +30,4 @@ body {
   padding: 10px;
   border: 5px solid black;
   margin: 10px;
-}
-
-.parent .child-1 {
-  position: fixed;
-  width: 100%;
-  top: 0px;
-  left: 0px;
-  margin: 0px;
-  box-sizing: border-box;
 }
