--- a/01/main.css
+++ b/01/main.css
@@ -7,10 +7,15 @@
 }
 
 #product-overview {
-  background: url("freedom.jpg");
+  background-image: url("freedom.jpg");
+  background-size: cover;
+  background-position: left 10% bottom 60%;
+  background-repeat: no-repeat;
   width: 100%;
   height: 500px;
   padding: 10px;
+  margin-top: 40px;
+  position: relative;
 }
 
 .section-title {
@@ -23,6 +28,9 @@
   font-family: "RixYeoljeongdo_Regular", sans-serif;
   font-weight: 400;
   font-style: normal;
+  position: absolute;
+  left: 3%;
+  bottom: 5%;
 }
 
 .plan_list {
