--- a/01/main.css
+++ b/01/main.css
@@ -7,14 +7,21 @@
 }
 
 #product-overview {
-  background-image: url("freedom.jpg");
+  background: url("freedom.jpg") left 10% bottom 60% / cover no-repeat
+    border-box;
+  /*
+  background-image: url("freedom.jpg") left 10% bottom 60%/cover;
   background-size: cover;
   background-position: left 10% bottom 60%;
   background-repeat: no-repeat;
+  background-origin: border-box;
+  background-clip: border-box;
+   */
   width: 100%;
   height: 500px;
   padding: 10px;
-  margin-top: 40px;
+  margin-top: 43px;
+  border: 5px red dashed;
   position: relative;
 }
 
