--- a/01/main.css
+++ b/01/main.css
@@ -7,7 +7,7 @@
 }
 
 #product-overview {
-  background: url("freedom.jpg") left 10% bottom 60% / cover no-repeat
+  background: url("images/freedom.jpg") left 10% bottom 60% / cover no-repeat
     border-box;
   /*
   background-image: url("freedom.jpg") left 10% bottom 60%/cover;
@@ -21,7 +21,6 @@
   height: 500px;
   padding: 10px;
   margin-top: 43px;
-  border: 5px red dashed;
   position: relative;
 }
 
