--- a/01/main.css
+++ b/01/main.css
@@ -7,10 +7,10 @@
 }
 
 #product-overview {
-  /*
-  background: url("images/freedom.jpg") left 10% bottom 60% / cover no-repeat
-    border-box;
-    */
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.3) 10%),
+    url("images/freedom.jpg") left 10% bottom 60% / cover no-repeat border-box,
+    #ff1b68;
+
   /*
   background-image: url("freedom.jpg") left 10% bottom 60%/cover;
   background-size: cover;
@@ -19,12 +19,18 @@
   background-origin: border-box;
   background-clip: border-box;
    */
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to left bottom,
     red 20%,
     blue 90%,
     rgba(0, 0, 0, 0.4)
-  );
+  ); */
+  /* background-image: radial-gradient(
+    ellipse 20px 50px at 20% 50%,
+    red 20%,
+    blue,
+    green
+  ); */
   width: 100%;
   height: 500px;
   padding: 10px;
@@ -134,6 +140,7 @@
   border: 2px solid #424242;
   border-radius: 50%;
   margin: 0 auto;
+  padding: 20px;
 }
 
 .key-feature_description {
