--- a/01/shared.css
+++ b/01/shared.css
@@ -10,6 +10,17 @@ body {
   margin: 0px;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .main-header {
   width: 100%;
   position: fixed;
