--- a/01/main.css
+++ b/01/main.css
@@ -1,40 +1,19 @@
-@font-face {
-  font-family: "RixYeoljeongdo_Regular";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2102-01@1.0/RixYeoljeongdo_Regular.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, 0.3) 10%),
-    url("images/freedom.jpg") left 10% bottom 60% / cover no-repeat border-box,
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("images/freedom.jpg") left 10% bottom 70% / cover no-repeat border-box,
     #ff1b68;
-
-  /*
-  background-image: url("freedom.jpg") left 10% bottom 60%/cover;
-  background-size: cover;
-  background-position: left 10% bottom 60%;
-  background-repeat: no-repeat;
-  background-origin: border-box;
-  background-clip: border-box;
-   */
-  /* background-image: linear-gradient(
-    to left bottom,
-    red 20%,
-    blue 90%,
-    rgba(0, 0, 0, 0.4)
-  ); */
-  /* background-image: radial-gradient(
-    ellipse 20px 50px at 20% 50%,
-    red 20%,
-    blue,
-    green
-  ); */
-  width: 100%;
-  height: 500px;
-  padding: 10px;
-  margin-top: 43px;
+  /* background-image: url("freedom.jpg");
+    background-size: cover;
+    background-position: left 10% bottom 20%; */
+  /* background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box; */
+  /* background-image: linear-gradient(180deg, red 70%, blue 60%, rgba(0,0,0,0.5)); */
+  /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
+  width: 100vw;
+  height: 33vh;
+  margin-top: 2.75rem;
+  /* border: 5px dashed red; */
   position: relative;
 }
 
@@ -45,12 +24,10 @@
 
 #product-overview h1 {
   color: white;
-  font-family: "RixYeoljeongdo_Regular", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  font-family: "Anton", sans-serif;
   position: absolute;
-  left: 3%;
   bottom: 5%;
+  left: 3%;
 }
 
 .plan_list {
@@ -62,8 +39,8 @@
 .plan {
   background: #d5ffdc;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
@@ -72,14 +49,14 @@
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan_annotation {
   background: white;
   color: #19b84c;
-  padding: 8px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+  padding: 0.5rem;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
 }
 
@@ -88,7 +65,7 @@
 }
 
 .plan_price {
-  color: #4b4b4b;
+  color: #858585;
 }
 
 .plan--highlighted .plan_title {
@@ -101,29 +78,29 @@
 
 .plan_features {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
-.plan_features li {
-  margin: 8px 0px;
+.plan_feature {
+  margin: 0.5rem 0;
 }
 
 #key-features {
-  background-color: #ff1b68;
-  margin-top: 80px;
-  padding: 16px;
+  background: #ff1b68;
+  margin-top: 5rem;
+  padding: 1rem;
 }
 
 #key-features .section-title {
   color: white;
-  margin: 32px;
+  margin: 2rem;
 }
 
-.key-features_list {
+.key-feature_list {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
@@ -139,17 +116,17 @@
   height: 128px;
   border: 2px solid #424242;
   border-radius: 50%;
-  margin: 0 auto;
-  padding: 20px;
+  margin: auto;
+  padding: 1.5rem;
 }
 
 .key-feature_description {
   text-align: center;
   font-weight: bold;
   color: white;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
-h1 {
-  font-family: sans-serif;
-}
+/* h1 {
+    font-family: sans-serif;
+} */
