--- a/01/packages/packages.css
+++ b/01/packages/packages.css
@@ -1,19 +1,19 @@
 main {
-  padding-top: 32px;
+  padding-top: 2rem;
 }
 
 .background {
   background: url("../images/plans-background.jpg") center/cover;
   filter: grayscale(40%);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   z-index: -1;
 }
 
 .plan-contents {
   width: 80%;
-  margin: 16px 0;
+  margin: 1rem 0;
   border: 4px solid #0e4f1f;
   border-left: none;
   position: relative;
@@ -29,7 +29,7 @@ main {
   text-decoration: none;
   color: inherit;
   display: block;
-  padding: 30px;
+  padding: 1.875rem;
 }
 
 .plan-contents_title {
@@ -39,9 +39,9 @@ main {
 .package_badge {
   top: 0px;
   right: 0px;
-  margin: 30px;
+  margin: 1.875rem;
   position: absolute;
-  font-size: 12px;
+  font-size: 0.8rem;
   color: white;
   background: #ff5454;
   padding: 8px;
@@ -52,11 +52,11 @@ main {
 }
 
 .plan-contents_description {
-  padding: 16px;
+  padding: 0.5rem;
   background-color: white;
   border: #0e4f1f 1px solid;
   color: #0e4f1f;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .contents_top {
