--- a/01/shared.css
+++ b/01/shared.css
@@ -4,30 +4,27 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  margin: 0px;
+  margin: 0;
 }
 
 .backdrop {
   position: fixed;
+  display: none;
   top: 0;
   left: 0;
-  display: none;
   z-index: 100;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
 }
 
 .main-header {
   width: 100%;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   background: #2ddf5c;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   z-index: 1;
 }
 
@@ -40,13 +37,15 @@ body {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  font-size: 22px;
-  height: 22px;
+  font-size: 1.5rem;
+  height: 1.5rem;
+  /* width: 20px; */
   display: inline-block;
 }
 
 .main-header_brand img {
   height: 100%;
+  /* width: 100%; */
 }
 
 .main-nav {
@@ -64,14 +63,14 @@ body {
 
 .main-nav_item {
   display: inline-block;
-  margin: 0px 10px;
+  margin: 0 1rem;
 }
 
 .main-nav_item a {
   text-decoration: none;
   color: #0e4f1f;
   font-weight: bold;
-  padding: 3px 0px;
+  padding: 0.2rem 0;
 }
 
 .main-nav_item a:hover,
@@ -83,7 +82,7 @@ body {
 .main-nav_item--cta a {
   color: white;
   background: #ff1b68;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 
@@ -95,21 +94,21 @@ body {
 }
 
 .main-footer {
-  background-color: black;
-  padding: 32px;
-  margin-top: 48px;
+  background: black;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
 .main-footer_links {
   list-style: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 .main-footer_link {
   display: inline-block;
-  margin: 0px 16px;
+  margin: 0 1rem;
 }
 
 .main-footer_link a {
@@ -127,7 +126,7 @@ body {
   color: white;
   font: inherit;
   border: 1.5px solid #0e4f1f;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 8px;
   font-weight: bold;
   cursor: pointer;
@@ -135,7 +134,7 @@ body {
 
 .button:hover,
 .button:active {
-  background-color: white;
+  background: white;
   color: #0e4f1f;
 }
 
